--- a/resource/RGBStripeController.html
+++ b/resource/RGBStripeController.html
@@ -9,8 +9,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js' integrity='sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb' crossorigin='anonymous'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js' integrity='sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn' crossorigin='anonymous'></script>
 
-  <link href='https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css' rel='stylesheet'>
-  <script src='https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js'></script>
   <title>LED Controller WS2812B</title>
 
 </head>
@@ -19,7 +17,7 @@
   <div class='container'>
     <div class='jumbtron'>
       <h1 class='display-4'>WS2812B LED controller</h1>
-      <p class='lead'>LED Stripe controller on ESP8266</p>
+      <p class='lead'>LED Stripe controller on ESP8266 <span> | connection mode: XX_Mode</span></p>
       <hr class='my-4'>
     </div>
     <div class='row'>
